--- a/src/pages/Login/components/LoginWithGoogle/LoginWithGoogle.scss
+++ b/src/pages/Login/components/LoginWithGoogle/LoginWithGoogle.scss
@@ -11,31 +11,26 @@
         border-radius: 0.5rem !important;
         color: #fff !important;
         box-shadow: 0 6px 10px #00000026 !important;
-        transition: all .2s;
+        transition: all 0.2s;
         cursor: pointer;
         width: 15rem;
-            display: flex !important;
-            justify-content: center;
-            align-items: center;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
         &:disabled {
-            background-color:#ddd !important;
+            background-color: #ddd !important;
             color: #ccc !important;
             border: none !important;
         }
         &:hover {
             background-color: rgba(#fff, 0.3) !important;
             box-shadow: 0 6px 10px #00000040 !important;
-
         }
         > div {
             border-radius: 0.5rem !important;
             background: rgba(255, 255, 255, 0) !important;
             margin-bottom: -4px !important;
             margin-right: 0 !important;
-            
-        }
-        >span {
-
         }
     }
 }
